--- a/.air.toml
+++ b/.air.toml
@@ -1,26 +1,27 @@
-   root = "."
-   tmp_dir = "tmp"
+root = "."
+tmp_dir = "tmp"
 
-   [build]
-   cmd = "go build -o ./tmp/main ."
-   bin = "./tmp/main"
-   full_bin = "./tmp/main"
-   include_ext = ["go", "tpl", "tmpl", "html"]
-   exclude_dir = ["assets", "tmp", "vendor"]
-   include_dir = []
-   exclude_file = []
-   delay = 1000
-   stop_on_error = true
-   log = "air_errors.log"
+[build]
+  cmd = "go build -o ./tmp/main ."
+  bin = "./tmp/main"
+  delay = 1000
+  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  include_ext = ["go", "tpl", "tmpl", "html"]
+  exclude_file = []
+  exclude_regex = ["_test.go"]
+  exclude_unchanged = false
+  follow_symlink = false
+  full_bin = ""
 
-   [log]
-   time = false
+[color]
+  app = ""
+  build = "yellow"
+  main = "magenta"
+  runner = "green"
+  watcher = "cyan"
 
-   [color]
-   main = "magenta"
-   watcher = "cyan"
-   build = "yellow"
-   runner = "green"
+[log]
+  time = false
 
-   [misc]
-   clean_on_exit = true
+[misc]
+  clean_on_exit = false
